<resources>
    <string name="app_name">Vocab Builder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="shared_preferences_file">SharedPreferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="all_words">All Words</string>
    <string name="error_select_one_set">Please select at least one set</string>
    <string name="tts_voice_data_not_found">Voice data not found. Please install voice data for English (United " +
                "States) or English (United Kingdom). Connect to Wi-Fi to install.</string>

    <string name="reminder_exception_text">Reminder is set.</string>
    <string name="reminder_set_for">"Set for "</string>
    <string name="reminder_unset_modify">" . Unset/Modify"</string>
    <string name="reminder_notification_text">Time to learn new words !!</string>
    <string name="reminder_option_unset">UNSET</string>

    <string name="frag_tag_time_picker">time_picker</string>
    <string name="reminder_action_code">reminder_action_code</string>



    <!-- Default Preferences Keys and Strings related to Settings-->
    <string name="pref_key_filter_status">pref_filter_status</string>
    <string name="pref_key_filter_favorite">pref_filter_favorite</string>
    <string name="pref_key_shuffle">pref_shuffle</string>
    <string name="pref_key_show_meaning_word_list">pref_show_meaning_word_list</string>
    <string name="pref_key_max_words_in_quiz">pref_max_words_in_quiz</string>
    <string name="pref_key_reset_words_on_wrong_quiz">pref_reset_words_on_wrong_quiz</string>
    <string name="pref_key_set_selection">pref_set_selection</string>
    <string name="pref_cat_filter_title">Filters</string>
    <string name="pref_cat_wordList_title">Word List</string>
    <string name="pref_cat_flashCard_title">Flash Card</string>
    <string name="pref_cat_quiz_title">Quiz</string>
    <string name="pref_filter_title_progress">Progress</string>
    <string name="pref_filter_title_favorites">Favorites</string>
    <string name="pref_filter_summary_favorites">Learn only favorite words</string>
    <string name="pref_wordList_title_shuffle">Shuffle</string>
    <string name="pref_wordList_summary_shuffle">Words will appear in random order</string>
    <string name="pref_wordList_title_showMeanings">Show Meanings</string>
    <string name="pref_wordList_summary_showMeanings">Show meanings and sentence by default</string>
    <string name="pref_quiz_title_maxWords">Maximum words in Quiz</string>
    <string name="pref_quiz_title_resetProgress">Reset Progress</string>
    <string name="pref_quiz_summary_resetProgress">For the words you answered wrong</string>
    <string name="pref_filter_title_sets">Sets to learn</string>
    <string name="pref_filter_summary_sets">Multiple sets can be selected</string>
    <string name="pref_key_reminder">pref_reminder</string>
    <string name="pref_reminder_value">pref_reminder_value</string>
    <string name="pref_title_reminder">Reminder</string>
    <string name="pref_summary_reminder_default">Set Reminder</string>
    <string-array name="pref_max_words_list_titles">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="pref_max_words_list_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="pref_master_learn_all_titles">
        <item>All Words</item>
        <item>Learning</item>
        <item>Mastered</item>
    </string-array>
    <string-array name="pref_master_learn_all_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="shuffle_sequence">shuffle_sequence</string>
    <string name="shuffle_sequence_number_of_words">shuffle_sequence_number_of_words</string>
    <string name="filter_learning">2</string>
    <string name="filter_mastered">3</string>

</resources>
