<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General">

        <Preference
            android:key="@string/pref_key_reminder"
            android:enabled="true"
            android:title="@string/pref_title_reminder"
            android:summary="@string/pref_summary_reminder_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_filter_title">


        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_master_learn_all_titles"
            android:entryValues="@array/pref_master_learn_all_values"
            android:key="@string/pref_key_filter_status"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_filter_title_progress"/>
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_filter_favorite"
        android:summary="@string/pref_filter_summary_favorites"
        android:title="@string/pref_filter_title_favorites"/>
    <Preference
        android:key="@string/pref_key_set_selection"
        android:enabled="true"
        android:title="@string/pref_filter_title_sets"
        android:summary="@string/pref_filter_summary_sets"/>


    <PreferenceCategory
        android:title="@string/pref_cat_wordList_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_shuffle"
            android:summary="@string/pref_wordList_summary_shuffle"
            android:title="@string/pref_wordList_title_shuffle"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_show_meaning_word_list"
            android:summary="@string/pref_wordList_summary_showMeanings"
            android:title="@string/pref_wordList_title_showMeanings"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_flashCard_title">

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_cat_quiz_title">

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/pref_max_words_list_titles"
            android:entryValues="@array/pref_max_words_list_values"
            android:key="@string/pref_key_max_words_in_quiz"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_quiz_title_maxWords"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_reset_words_on_wrong_quiz"
            android:summary="@string/pref_quiz_summary_resetProgress"
            android:title="@string/pref_quiz_title_resetProgress"/>
    </PreferenceCategory>


</PreferenceScreen>


